# agent-runtime-langgraph

./: .env.example  .gitignore  README.md  openapi.json  pyproject.toml
src/react_agent/: __init__.py  cli.py  graph.py  observability.py  prompts.py  tools.py
src/react_agent/agent/: __init__.py  registry.py
src/react_agent/observability/: __init__.py  langfuse.py
src/react_agent/server/: __init__.py  app.py  deps.py  thread_metadata.py  title_service.py
src/react_agent/server/routes/: chat.py  threads.py
src/react_agent/utils/: __init__.py  messages.py  sse.py
web/: app.js  index.html  styles.css
