[project]
name = "react_agent_runtime"
version = "0.1.0"
description = "LangGraph ReAct agent runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=0.1.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-tavily>=0.1.0",
  "langgraph-cli[inmem]>=0.1.0",
  "langfuse>=3.0.0",
  "python-dotenv>=1.0.0",
  "tavily-python>=0.5.0",
  "tinyfish>=0.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
react-agent = "react_agent.cli:main"
react-agent-server = "react_agent.server:main"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/react_agent"]
